# niffler-py-st1

./: README.md  pyproject.toml
new/niffler_tests/pages/: base_page.py  main_page.py  people_page.py
new/niffler_tests/test_data/: credentials.py
new/niffler_tests/utils/: choice_random_people.py  random_data.py
new/tests/: conftest.py  test_add_category.py  test_friends.py  test_login.py  test_people.py  test_spending.py
niffler_tests/pages/: friends_page.py  login_page.py  profile_page.py  registration_page.py
niffler_tests/utils/: requests_helper.py
tests/: conftest.py  test_add_category.py  test_api.py  test_friends.py  test_people.py  test_registration.py
