[tool.poetry]
name = "niffler-st5"
version = "0.1.0"
description = ""
authors = ["Bohdan Obruch <bodan1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
selene = "^2.0.0rc9"
pytest = "^8.3.2"
pytest-dotenv = "^0.5.2"
faker = "^27.0.0"
pytest-xdist = "^3.6.1"
pytest-base-url = "^2.1.0"
pytest-order = "^1.2.1"
pkce = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--base_url http://frontend.niffler.dc"

testpaths = [
    "tests",
]